# SOFTX_2020_86

./: .gitattributes  LICENSE.md  README.md  common.mk  compileCodes.bat  compileCodes.sh  polybenchUtilFuncts.h
2DCONV/: 2DConvolution.cpp  HDcommon.h  Makefile  conv2DKernel.comp
2MM/: 2mm.cpp  HDcommon.h  Makefile  mm2kernel1.comp  mm2kernel2.comp
3DCONV/: 3DConvolution.cpp  HDcommon.h  Makefile  conv3DKernel.comp
3MM/: 3mm.cpp  HDcommon.h  Makefile  mm3kernel1.comp  mm3kernel2.comp  mm3kernel3.comp
ATAX/: HDcommon.h  Makefile  atax.cpp  ataxkernel1.comp  ataxkernel2.comp
BICG/: HDcommon.h  Makefile  bicg.cpp  bicgkernel1.comp  bicgkernel2.comp
CORR/: HDcommon.h  Makefile  correlation.cpp  corrkernel.comp  meankernel.comp  reducekernel.comp  stdkernel.comp
COVAR/: HDcommon.h  Makefile  covariance.cpp  covarkernel.comp  meankernel.comp  reducekernel.comp
FDTD-2D/: HDcommon.h  Makefile  fdtd2d.cpp  fdtdstep1kernel.comp  fdtdstep2kernel.comp  fdtdstep3kernel.comp
GEMM/: HDcommon.h  Makefile  gemm.cpp  gemmkernel.comp
GESUMMV/: HDcommon.h  Makefile  gesummv.cpp  gesummvkernel.comp
GRAMSCHM/: HDcommon.h  Makefile  gramschmidt.cpp  gskernel1.comp  gskernel2.comp  gskernel3.comp
MVT/: HDcommon.h  Makefile  mvt.cpp  mvtkernel1.comp  mvtkernel2.comp
SYR2K/: HDcommon.h  Makefile  syr2k.cpp  syr2kkernel.comp
SYRK/: HDcommon.h  Makefile  syrk.cpp  syrkkernel.comp
android/: .gitignore  (+2 more)
android/COVAR/: CMakeLists.txt  build.gradle
android/COVAR/src/main/: AndroidManifest.xml
android/COVAR/src/main/java/vkpolybench/covar/: ActivityCOVAR.java
(+70 files in other folders)
